--- a/style/style.css
+++ b/style/style.css
@@ -91,14 +91,18 @@ body {
 }
 
 .product-image-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 260px;
   overflow: hidden;
+  background-color: rgba(128, 128, 128, 0.057);
 }
 
 .product-image {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: auto;
   transition: 0.3s;
 }
 
@@ -107,5 +111,16 @@ body {
 }
 
 .product-title {
-  margin: 10px;
+  display: flex;
+  align-items: start;
+  width: 100%;
+  margin-left: 20px;
+}
+
+.product-rating {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  width: 100%;
+  margin-left: 20px;
 }
