--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 250px;
-  height: 380px;
+  height: 400px;
   border: 1px solid rgba(83, 68, 68, 0.481);
   border-radius: 3px;
 }
@@ -113,14 +113,23 @@ body {
 .product-title {
   display: flex;
   align-items: start;
+  overflow-wrap: break-word;
   width: 100%;
-  margin-left: 20px;
+  padding-left: 20px;
+  text-overflow: ellipsis;
+
+}
+
+.product-title h4 {
+  width: 90%;
+  text-overflow: ellipsis;
 }
 
 .product-rating {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  width: 100%;
-  margin-left: 20px;
+  width: 90%;
+  padding-left: 20px;
+  padding-bottom: 10px;
 }
