--- a/style/style.css
+++ b/style/style.css
@@ -116,13 +116,14 @@ body {
   overflow-wrap: break-word;
   width: 100%;
   padding-left: 20px;
-  text-overflow: ellipsis;
-
+  
 }
 
-.product-title h4 {
+.product-title h4{
   width: 90%;
-  text-overflow: ellipsis;
+  line-height: 20px;
+  max-height: 60px;
+  overflow: hidden;
 }
 
 .product-rating {
