--- a/style/mediaQueries/small.css
+++ b/style/mediaQueries/small.css
@@ -1,23 +1,11 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
 
 .form-container {
   display: flex;
   flex-direction: column;
   background-color: black;
   color: white;
-  width: 30%;
-  height: 100px;
+  width: 80%;
+  height: 200px;
   justify-content: space-around;
   align-items: center;
   margin-top: 2rem;
@@ -26,7 +14,7 @@ body {
 }
 
 .form-container h1 {
-  font-size: 20pt;
+  font-size: 30pt;
 }
 
 .searching-form {
@@ -41,6 +29,7 @@ body {
   border: none;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  font-size: 20pt;
 }
 
 .searching-form button {
@@ -53,12 +42,12 @@ body {
   background-color: rgb(231, 208, 4);
   transition: 0.3s;
 }
-.search-button:hover{
+.search-button:active{
   background-color: rgb(255, 230, 0);
 }
 
 .user-helper {
-  margin: 15px;
+  margin: 30px;
 }
 
 .results {
@@ -70,11 +59,8 @@ body {
 }
 
 .results-wrapper {
-  display: grid;
-  grid-template-columns: 250px 250px 250px 250px;
-  column-gap: 20px;
-  row-gap: 20px;
-  width: 80%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -84,8 +70,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 250px;
-  height: 400px;
+  width: 90%;
+  height: 600px;
   border: 1px solid rgba(83, 68, 68, 0.481);
   border-radius: 3px;
 }
@@ -106,31 +92,34 @@ body {
   transition: 0.3s;
 }
 
-.product-image:hover {
+.product-image:active {
   transform: scale(1.1);
 }
 
 .product-title {
   display: flex;
-  align-items: start;
+  align-items: center;
+  justify-content: center;
   overflow-wrap: break-word;
   width: 100%;
-  padding-left: 20px;
   
 }
 
 .product-title h4{
   width: 90%;
-  line-height: 20px;
-  max-height: 60px;
+  line-height: 40px;
+  max-height: 120px;
   overflow: hidden;
+  font-size: 20pt;
+  text-align: center;
 }
 
 .product-rating {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
   width: 90%;
-  padding-left: 20px;
-  padding-bottom: 10px;
+  font-size: 20pt;
+  margin-bottom: 20px;
 }
