--- a/style/mediaQueries/mid.css
+++ b/style/mediaQueries/mid.css
@@ -64,11 +64,14 @@
 }
 
 .results-wrapper {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 280px 280px;
+  row-gap: 10px;
+  column-gap: 20px;
+  width: 90%;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+
 }
 
 .result-item {
@@ -76,8 +79,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  height: 800px;
+  width: 280px;
+  height: 600px;
   border: 1px solid rgba(83, 68, 68, 0.481);
   border-radius: 3px;
 }
@@ -87,7 +90,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 400px;
+  height: 350px;
   overflow: hidden;
   background-color: rgba(128, 128, 128, 0.057);
 }
