--- a/style/mediaQueries/large.css
+++ b/style/mediaQueries/large.css
@@ -101,17 +101,12 @@
 .product-title {
   display: flex;
   align-items: start;
-  overflow-wrap: break-word;
   width: 100%;
-  padding-left: 20px;
-  
 }
 
 .product-title h4{
-  width: 90%;
-  line-height: 20px;
-  max-height: 60px;
-  overflow: hidden;
+  font-size: 20pt;
+  text-align: start;
 }
 
 .product-rating {
@@ -119,6 +114,6 @@
   flex-direction: column;
   justify-content: start;
   width: 90%;
-  padding-left: 20px;
   padding-bottom: 10px;
+  font-size: 15pt;
 }
